tests/valid-gd-scripts/static_typing.gd
func foo(x, var y, z: int, var q: int, w = 7, var e: int = 7, r: int = 7, t := 8, var y := 9):
	pass

func bar() -> void:
	pass

var x: int
var xx: int = 6
var xxx := 7

func baz():
	var x: int
	var xx: int = 6
	var xxx := 7

func expr():
	5 as int

export var icon_32 : Texture
export(Texture) var asdf : Texture
export var qwe := 5
