tests/invalid-gd-scripts/var_in_func_args.gd
func foo(x, y, z: int, q: int, w = 7, e: int = 7, r: int = 7, t := 8, var u := 9):
	pass
